docs: run configs overlay; derive main-launch.json in lathe:sync
Two coupled revisions to the run/test/debug design and its
implementation plan.

User run configuration (.lathe-run.json): a user-authored file at the
workspace root holding named run/debug configs. It is a thin overlay on
captured or derived launch data — user-owned fields only (program args,
extra JVM args, env, cwd, debug, target selection); launch-correctness
fields (module/class path, --patch-module, captured --add-* directives,
placement, rewrite rules) stay owned by Maven capture and Lathe launch
logic. Overlay semantics are pinned: env merges into the inherited
environment, cwd resolves against the workspace root, overlay jvmArgs
append after template args so user -D/-X win last-wins JVM semantics.

main-launch.json becomes a lathe:sync artifact instead of a
server-derived cache borrowing JPMS placement from the test capture.
The in-fork listener can never author it (the fork sees the effective
JVM but is scope-blind), while the plugin holds both authoritative
inputs: membership from getRuntimeClasspathElements() and placement
computed with plexus-java's LocationManager — the same library that
partitioned the captured test fork, making derived and captured
placement consistent by construction rather than borrowed and filtered.
Written for every module on every build (sync is bound to
process-test-classes), so freshness is structural like workspace.json.

This dissolves design mass: the borrowed-placement machinery and the
"main without a test capture" limitation are gone (thin launcher
modules now work; only one build is required), modular and classpath
main collapse into one main-class-agnostic artifact (-m appended at
launch), MainLaunchResolver shrinks to MainLaunchReader + a pure
forMain transform, and two open questions (main JVM args: none carry
over, the overlay owns them; cache-vs-writer provenance) move to a
resolved-since-first-draft record.

Impl plan kept in sync: artifact table, fl